--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Biblioeca CECM JP</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="logo"></div>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </nav>
 </body>
 </html>
