--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <div class="content__imagen"></div>
     <div class="content__apresentacao"></div>
     </section>
-    <footer></footer>
+    <footer>
+        <div class="footer__title">CCM-Jose Pavan</div>
+        <div class="footer__imagen__direita"></div>
+        <div class="footer__imagen__esquerda"></div>
+    </footer>
 </body>
 </html>
